<resources>
    <string name="app_name">AndroidCalculator</string>
    <string name="n0">0</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="dot">.</string>
    <string name="eq">=</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="multi">×</string>
    <string name="div">÷</string>
    <string name="bs">BS</string>
    <string name="c">C</string>
    <string name="ac">AC</string>
    <string name="first">1st</string>
    <string name="second">2nd</string>
    <string name="pi">π</string>
    <string name="sin">sinθ</string>
    <string name="cos">cosθ</string>
    <string name="tan">tanθ</string>
    <string name="error">エラー</string>
</resources>